Add bending angle estimation

--- a/08_navion_with_fetoscope.ipynb
+++ b/08_navion_with_fetoscope.ipynb
@@ -1175,11 +1175,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estimate bending angle assuming constant curvature\n",
+    "\n",
+    "Assuming constante curvature, the bending angle $\\theta = A * b$ with $b$ the magnetic field magnitude"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "A = 10\n"
+   ]
   }
  ],
  "metadata": {
